was missing a comma somewhere which was causing app to break. fixed.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           return (
             {
               url: gif.images.fixed_width.url,
-              rating: gif.rating
+              rating: gif.rating,
               slug: gif.slug
             }
           )
